# dock-from-dash

./: .gitignore  README.md  auto_hide.js  desktopIconsIntegration.js  extension.js  extension_top.js  local_install.sh  meson.build  meson_post_install.py  metadata.json  org.gnome.shell.extensions.dock-from-dash.gschema.xml  prefs.js
po/: LINGUAS  de.po  dock-from-dash.pot  es.po  fi.po  fr.po  nl.po  pt-br.po  ru.po
schemas/: meson.build  org.gnome.shell.extensions.dock-from-dash.gschema.xml  org.gnome.shell.extensions.dock_from_dash.gschema.xml
